add placeholder in login page

--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
 		a:link{color: green;}
 		a:visited{color: green;}
 		a:hover{color: red;}
-		p{color: red;font-size: 90px}
+		p{color: red;font-size: }
 	</style>
 	<center>
 		<p>Welcome</p>
